--- a/cs314a2/.project
+++ b/cs314a2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CS314A2</name>
+	<name>cs314a2</name>
 	<comment></comment>
 	<projects>
 	</projects>
